<resources>
    <string name="app_name">JucrChallenge</string>
    <string name="good_morning">Good morning %1$s</string>
    <string name="title">Changing your car</string>
    <string name="end_of_charge_time">Time to end of charge %1$s</string>
    <string name="model">Tesla Model X</string>
    <string name="voltage">Voltage</string>
    <string name="volts">240 Volts</string>
    <string name="statistics">Statistics</string>
    <string name="location">location</string>
    <string name="availability">%1$s/10 available</string>
    <string name="distance">12km</string>
    <string name="view_all">View All</string>
</resources>