<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    android:id="@+id/motionLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    android:background="@color/teal_200"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/greetingTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_morning"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greetingTv" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:src="@drawable/baseline_directions_car_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTv" />

    <TextView
        android:id="@+id/endOfChargeTimeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/end_of_charge_time"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />
    <com.example.jucrchallenge.utils.CircularProgressView
        android:id="@+id/circularProgressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:progress="100"
        android:scaleY="0.7"
        android:scaleX="0.7"
        app:layout_constraintTop_toBottomOf="@id/endOfChargeTimeTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomView"
        android:layout_margin="10dp"
        />
    <ImageView
        android:id="@+id/arrowDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/baseline_keyboard_arrow_down_24"
        app:layout_constraintBottom_toTopOf="@id/bottomView"
        android:visibility="gone"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circularProgressView"
        android:background="@drawable/bottoview_background"
        android:paddingStart="10dp"
        android:layout_margin="10dp"
        tools:ignore="RtlSymmetry">
        <TextView
            android:id="@+id/statisticsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />
        <ImageView
            android:id="@+id/more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_more_horiz_24"
            android:scaleType="fitEnd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/statisticsTitle"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/statics_item_view"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            />
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestCrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewH"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewV"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:listitem="@layout/nearby_supercharges_item_view"

                />
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>